c4prj1_deck/grade.txt
Grading at Tue Oct  1 20:39:57 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:312:7: error: expected ‘;’ before ‘count’
       count++;
       ^
Compilation of eval.c failed

Overall Grade: F
